syntax = "proto2";

package WORServer.Api.Game.StaticInfo;

enum ModifierCode {
	None = 0;
	Luck = 1;
	Prize = 2;
}
enum ResponseCode {
	Good = 0;
	Fail = 1;
	NotEnoughMoney = 2;
	AlreadyPlaying = 3;
	TimeLimit = 4;
}
message Request {
	required string ApiToken = 1;
}
message Response { 
	required ResponseCode Status = 1; 
	optional float WheelAnimationTime = 2 [default = 0]; 
	repeated SectorInfo Sectors = 3;
	optional int32 VowelPrice = 4 [default = 0];
	optional float OpenLetterAnimationTime = 5 [default = 0];
}
message SectorInfo {
	required int32 IndexSector = 1;
	required string Title = 2;
	optional ModifierCode Modifier = 3 [default = None];
}